--- a/src/StateStores/StateStores.csproj
+++ b/src/StateStores/StateStores.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
+    <PackageReference Include="System.Reactive" Version="4.2.0" />
+  </ItemGroup>
 
 </Project>
