--- a/src/StateStores.InMemory/StateStores.InMemory.csproj
+++ b/src/StateStores.InMemory/StateStores.InMemory.csproj
@@ -12,6 +12,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\src\StateStores\StateStores.csproj" />
+	  <ProjectReference Include="..\StateStores\StateStores.csproj" />
 	</ItemGroup>
 
 </Project>
