Add license and author

--- a/src/StateStores.Redis/StateStores.Redis.csproj
+++ b/src/StateStores.Redis/StateStores.Redis.csproj
@@ -5,6 +5,11 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+		<Authors>Jan Donnermayer</Authors>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Stackexchange.Redis" Version="2.0.601" />
