--- a/src/StateStores/StateStores.csproj
+++ b/src/StateStores/StateStores.csproj
@@ -3,12 +3,17 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <PropertyGroup>
+    <id>StateStores</id>
 		<Authors>Jan Donnermayer</Authors>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-	</PropertyGroup>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <description>Provides a simple interface for observing and modifying state atomically.</description>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <projectUrl>https://github.com/JanDonnermayer/StateStores</projectUrl>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
