--- a/src/StateStores/StateStores.csproj
+++ b/src/StateStores/StateStores.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
@@ -12,7 +12,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <description>Provides a simple interface for observing and modifying state atomically.</description>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
-    <projectUrl>https://github.com/JanDonnermayer/StateStores</projectUrl>
+    <ProjectUrl>https://github.com/JanDonnermayer/StateStores</ProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
