--- a/app/StateStores.App.Blazor/StateStores.App.Blazor.csproj
+++ b/app/StateStores.App.Blazor/StateStores.App.Blazor.csproj
@@ -1,7 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\StateStores.InMemory\StateStores.InMemory.csproj" />
+    <ProjectReference Include="..\..\src\StateStores.Redis\StateStores.Redis.csproj" />
+    <ProjectReference Include="..\..\src\StateStores\StateStores.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="system.reactive" Version="4.2.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <langversion>8.0</langversion>
   </PropertyGroup>
 
 </Project>
