--- a/app/StateStores.App.Blazor/appsettings.json
+++ b/app/StateStores.App.Blazor/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "URLS" : "http://localhost:7005;https://localhost:7006"
 }
