Add hostsettings, add counter2, add darkmode

--- a/app/StateStores.App.Blazor/config/appsettings.Development.json
+++ b/app/StateStores.App.Blazor/config/appsettings.Development.json
@@ -1,11 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
+      "System": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*",
-  "URLS" : "http://localhost:7005;https://localhost:7006"
+  }
+  
 }
