Refactor redis using const keys, add variable counter page , update config

--- a/app/StateStores.App.Blazor/config/hostSettings.pzi12362.json
+++ b/app/StateStores.App.Blazor/config/hostSettings.pzi12362.json
@@ -1,4 +1,4 @@
 {
     "URLS" : "http://{$env:machinename}:5005",
-    "Redis" : "http://linux-genet01:7001" 
+    "Redis" : "linux-genet01:7001" 
 }
