--- a/app/StateStores.App.Blazor/StateStores.App.Blazor.csproj
+++ b/app/StateStores.App.Blazor/StateStores.App.Blazor.csproj
@@ -7,6 +7,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Extensions.Configuration.Resolver" Version="0.0.3" />
     <PackageReference Include="system.reactive" Version="4.2.0" />
   </ItemGroup>
 
