--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -21,5 +21,5 @@ jobs:
       run: dotnet test --configuration Release
     - name: Pack 
       run: dotnet pack --configuration Release
-    - name: Publish Core
-      run: dotnet nuget push src/StateStores/bin/Release/*.nupkg -p PackageVersion=0.0.1
+    - name: Publish 
+      run: dotnet nuget push src/StateStores/bin/Release/*.nupkg -p:PackageVersion=0.0.1
