--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -15,13 +15,12 @@ jobs:
         dotnet-version: 3.1.100
       env:
         NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        PACKAGE_VERSION: 0.0.1
     - name: Build 
       run: dotnet build --configuration Release
     - name: Test 
       run: dotnet test --configuration Release
     - name: Pack 
-      run: dotnet pack --configuration Release -p:PackageVersion=0.0.1
-    - name: Add GPR Source
-      run: nuget sources add -name "github" -Source https://nuget.pkg.github.com/jandonnermayer/index.json -Username jandonnermayer -Password ${{ secrets.GITHUB_TOKEN }}
+      run: dotnet pack --configuration Release -p:PackageVersion=$PACKAGE_VERSION
     - name: Publish 
-      run: dotnet nuget push src/StateStores/bin/Release/netstandard2.0/*.nupkg --source "github"
+      run: dotnet nuget push "src/StateStores/bin/Release/netstandard2.0/*.nupkg" --source "github"
