--- a/src/StateStores/StateStores.csproj
+++ b/src/StateStores/StateStores.csproj
@@ -9,10 +9,12 @@
   <PropertyGroup>
     <id>StateStores</id>
 		<Authors>Jan Donnermayer</Authors>
+    <Version>0.0.1</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <description>Provides a simple interface for observing and modifying state atomically.</description>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <ProjectUrl>https://github.com/JanDonnermayer/StateStores</ProjectUrl>
+    <RepositoryUrl>https://github.com/JanDonnermayer/StateStores</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
