--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Pack 
       run: dotnet pack --configuration Release -p:PackageVersion=$PACKAGE_VERSION
     - name: Publish 
-      run: dotnet nuget push "src/StateStores/bin/Release/*.nupkg" --source "github"
+      run: dotnet nuget push "src/StateStores/bin/Release/*.nupkg"
